Pull up following revision(s) (requested by ozaki-r in ticket #297): 	sys/net/if_bridge.c: revision 1.135 Add curlwp_bind to bridge_input for psref It can be called in a thread context via tap (tap_dev_write). Fix PR kern/52587